--- a/packages/odo-share/package.json
+++ b/packages/odo-share/package.json
@@ -9,8 +9,7 @@
   "author": "Odopod",
   "contributors": [
     {
-      "name": "Nathan Buchar",
-      "email": "nathan.buchar@odopod.com"
+      "name": "Nathan Buchar"
     },
     {
       "name": "Glen Cheney",
