Update JSDoc types, add typescript definitions for more components (#17)
* Expandable: Simplify initializeAll

* Fix JSDoc and other issues revealed by @ts-check directive

* Dialog: update types

* Affix: add type definitions

* Scroll animation: add type definintions

* Device: add type definitions.

* Affix: fix type defs.

* Carousel: add type definitions

* Add types field to `package.json`s

* auto-format index.d.ts files.

* Responsive images: add type definitions

* Pointer: add type definitions

* Carousel: fix type defs

* Use enums where possible.

* Window events: add definitions

* Update pointer tests to reflect new options object.

* Draggable: add type definitions

* Dropdown: add type definitions

* Scroll feedback: add type definitions

* Sticky headers: add type definitions

* StickyHeaders: oops, add index.d.ts to list of files for package

* Remove Nate's old email

--- a/packages/odo-carousel/package.json
+++ b/packages/odo-carousel/package.json
@@ -6,6 +6,7 @@
   "module": "dist/odo-carousel.esm.js",
   "style": "css/odo-carousel.css",
   "odoModule": "src/carousel.js",
+  "types": "index.d.ts",
   "sideEffects": false,
   "author": "Odopod",
   "contributors": [
@@ -25,7 +26,8 @@
   "files": [
     "css",
     "dist",
-    "src"
+    "src",
+    "index.d.ts"
   ],
   "odoKeywords": [
     "ui"
