--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "chai": "^4.1.1",
     "eslint": "^4.5.0",
     "execa": "^0.10.0",
-    "fs-extra": "^5.0.0",
+    "fs-extra": "^6.0.1",
     "glob": "^7.1.1",
     "gulp": "^4.0.0",
     "gulp-eslint": "^4.0.0",
@@ -36,17 +36,17 @@
     "karma-fixture": "^0.2.6",
     "karma-html2js-preprocessor": "^1.1.0",
     "karma-mocha": "^1.3.0",
-    "karma-rollup-preprocessor": "^5.0.1",
+    "karma-rollup-preprocessor": "^6.0.0",
     "lerna": "^2.1.2",
     "minimist": "^1.2.0",
     "mocha": "^5.0.0",
     "nunjucks": "^3.0.0",
     "pify": "^3.0.0",
-    "rollup": "^0.58.2",
+    "rollup": "^0.60.1",
     "rollup-plugin-babel": "^3.0.2",
     "rollup-plugin-commonjs": "^9.1.0",
     "rollup-plugin-node-resolve": "^3.0.0",
-    "rollup-plugin-uglify": "^3.0.0",
-    "sinon": "^4.0.1"
+    "rollup-plugin-terser": "^1.0.1",
+    "sinon": "^5.1.0"
   }
 }
